correcting vertical spacing

--- a/src/components/Entry.css
+++ b/src/components/Entry.css
@@ -4,7 +4,7 @@
     margin : 10px 20px 10px 20px;
     height: 25%;
     font-size: 0.6rem;
-    justify-content: flex-start;
+    justify-content: space-around;
 }
 /*Flex child left*/
 #mainImageBox{
